import { BaseSchema } from '@adonisjs/lucid/schema'

export default class extends BaseSchema {
  protected tableName = 'profiles'

  async up() {
    this.schema.createTable(this.tableName, (table) => {
      table.integer('user_id').unsigned().references('id').inTable('users').unique().nullable().onDelete('CASCADE')
      table.integer('avatar_id').unsigned().references('id').inTable('avatars').nullable()
      table.string('display_name', 50).nullable()
      table.text('bio').nullable()
      table.boolean('is_banned').notNullable().defaultTo(false)
      table.boolean('is_deleted').notNullable().defaultTo(false)
      table.datetime('ban_expires_at').nullable()
      table.timestamp('created_at', { useTz: true })
      table.timestamp('updated_at', { useTz: true })
    })
  }

  async down() {
    this.schema.dropTable(this.tableName)
  }
}
